--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -43,8 +43,8 @@
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="{% static 'images/blank-profile-picture-973460_640.png' %}" alt="Image"/></a></div>
-          <div class="h2 title"><i>Write Your name</i></div>
-          <p class="category text-white"><i>Write Your Skills</i></p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <div class="h2 title">Rohit Deore</div>
+          <p class="category text-white">Android Development | Java Programmer | UI/UX Enthusiast</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
         </div>
       </div>
       <div class="section">
@@ -65,7 +65,7 @@
                            <!-- ABOUT SECTION STARTS RIGHT HERE -->
 
             <div class="h4 mt-0 title">About</div>
-            <p>Write About Yourself</p>
+            <p>I am tech enthusiast loves to code in java, also insterested in Android Development. I had designed a daily news app, also Password Manager app</p>
             <p>Elaborate </p>
           </div>
         </div>
@@ -78,23 +78,23 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8"><i>Write Your Age</i></div>
+              <div class="col-sm-8"><i>20</i></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8"><i>Write Your Email</i></div>
+              <div class="col-sm-8"><i>deorerohit18@gmail.com</i></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8"><i>Write your Phone No.</i></div>
+              <div class="col-sm-8"><i>7887954781</i></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8"><i>Enter Your Address</i></div>
+              <div class="col-sm-8"><i>Nashik, Maharashtra</i></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8"><i>Enter Your Languages You know </i></div>
+              <div class="col-sm-8"><i>English, Hindi, Marathi</i></div>
             </div>
           </div>
         </div>
@@ -112,9 +112,9 @@
 
             <!-- HTML BAR -->
 
-            <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Java</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@
 
             <!-- CSS BAR -->
 
-            <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">C++</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
               </div>
@@ -134,7 +134,7 @@
 
             <!-- JAVASCRIPT BAR -->
 
-            <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">C</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
@@ -144,7 +144,7 @@
 
                <!-- SASS BAR -->
 
-            <div class="progress-container progress-primary"><span class="progress-badge">SASS</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Python</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
@@ -166,7 +166,7 @@
 
                 <!-- PHOTOSHOP BAR -->
 
-            <div class="progress-container progress-primary"><span class="progress-badge">Photoshop</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Adobe Premire Pro</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
               </div>
@@ -200,7 +200,7 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="{%static 'images/project-1.jpg'%}" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Recent Project</div>
+                      <div class="h4">Excel Automation</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
